--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 langchain==0.1.16
 langchain_community==0.0.34
 streamlit==1.33.0
+torch
+transformers
+sentence-transformers
+datasets
+faiss-cpu
+
